@@ -926,7 +926,7 @@ long DecodeKernel(void *binary, entry_t *rentry, char **raddr, int *rsize)
 		switch (kernel_header->compress_type)
 		{
 			case OSSwapBigToHostConstInt32('lzvn'):
-				size = decompress_lzvn( binary, uncompressed_size, &kernel_header->data[0], OSSwapBigToHostInt32(kernel_header->compressed_size));
+				size = lzvn_decode( binary, uncompressed_size, &kernel_header->data[0], OSSwapBigToHostInt32(kernel_header->compressed_size));
 				break;
 
 			case OSSwapBigToHostConstInt32('lzss'):
